[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.10.0",
    "wheel",
    "oldest-supported-numpy"
]

[project]
name = "pymsis"
version = "0.7.0"
description = "A Python wrapper around the NRLMSIS model."
readme = "README.md"
license = {file = "LICENSE"}
keyword = ["MSIS2", "NRLMSIS"]
authors = [{name = "Greg Lucas", email = "greg.lucas@lasp.colorado.edu"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.optional-dependencies]
tests = [
    "flake8",
    "pytest",
    "pytest-cov",
]
docs = [
    "matplotlib",
    "sphinx<6",
    "sphinx_gallery",
    "pydata-sphinx-theme",
]
dev = [
    "pymsis[tests,docs]",
    "mypy",
    "pre-commit",
    "ruff",
]

[project.urls]
homepage = "https://swxtrec.github.io/pymsis/"
repository = "https://github.com/swxtrec/pymsis"

[tool.pytest.ini_options]
junit_family = "xunit2"
testpaths = [
  "tests",
]
addopts = [
    "--import-mode=importlib",
]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest --pyargs pymsis"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.pydocstyle]
match = "pymsis/*.py"

[tool.ruff]
target-version = "py38"
select = ["B", "D", "E", "F", "I", "N", "S", "W", "PL", "PT", "UP", "RUF", "ANN"]
# Ignore import sorting for now until lines_after_imports is respected
# by ruff and we can replace isort
ignore = ["B028", "D203", "D212", "I001", "PLR0913", "S310"]

[tool.ruff.per-file-ignores]
"examples/*" = ["D", "ANN"]
"tests/*" = ["D", "S", "ANN"]
"tools/*" = ["ANN"]
