[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.13.1",
    "numpy>=2",
    "setuptools_scm>=7",
]

[project]
name = "pymsis"
dynamic = ["version"]
description = "A Python wrapper around the NRLMSIS model."
readme = "README.md"
license = {file = "LICENSE"}
keyword = ["MSIS2", "NRLMSIS"]
authors = [{name = "Greg Lucas", email = "greg.lucas@lasp.colorado.edu"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.10"
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
doc = [
    "matplotlib",
    "myst-parser",
    "sphinx",
    "sphinx_gallery",
    "pydata-sphinx-theme",
]
dev = [
    "pymsis[doc,test]",
    "mypy",
    "pre-commit",
    "ruff",
]

[project.urls]
homepage = "https://swxtrec.github.io/pymsis/"
repository = "https://github.com/swxtrec/pymsis"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"
parentdir_prefix_version = "pymsis-"
fallback_version = "0.0+UNKNOWN"

[tool.pytest.ini_options]
junit_family = "xunit2"
testpaths = [
  "tests",
]
addopts = [
    "--import-mode=importlib",
]

[tool.cibuildwheel]
# skip Python <3.10
# skip 32 bit windows and linux builds for lack of numpy wheels
skip = "cp36* cp37* cp38* cp39* *-win32 *_i686"
free-threaded-support = true
test-requires = "pytest"
test-command = "pytest --pyargs pymsis"

[tool.ruff]
target-version = "py310"
lint.select = ["B", "D", "E", "F", "I", "N", "S", "W", "PL", "PT", "UP", "RUF", "ANN"]
lint.ignore = ["B028", "D203", "D212", "PLR0913", "S310"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["ANN", "D"]
"tests/*" = ["ANN", "D", "S"]
"tools/*" = ["ANN", "S"]
".github/*" = ["S"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
lines-after-imports = 2
